--- a/style.css
+++ b/style.css
@@ -568,6 +568,59 @@ body {
                                     background-repeat: no-repeat;
                                   
                                 }
+
+
+                                .img11:hover{
+                                    background-color: rgba(255, 255, 255, .27);
+                                }
+                                .img11{
+                                    background-image: url("img/r1.avif");
+                                    background-size: cover; 
+                                    background-position: center;
+                                    background-repeat: no-repeat;
+                                    
+                                    
+                                }
+                                .img21{
+                                    background-image: url("img/r2.avif");
+                                    background-size: cover; 
+                                    background-position: center;
+                                    background-repeat: no-repeat;
+                                   
+                                    
+                                }
+                                .img31{
+                                    background-image: url("img/r3.avif");
+                                    background-size: cover; 
+                                    background-position: center;
+                                    background-repeat: no-repeat;
+                                    
+                                   
+                                }
+                                .img41{
+                                    background-image: url("img/r4.avif");
+                                    background-size: cover; 
+                                    background-position: center;
+                                    background-repeat: no-repeat;
+                                    
+                                    
+                                }
+                                .img51{
+                                    background-image: url("img/r5.avif");
+                                    background-size: cover; 
+                                    background-position: center;
+                                    background-repeat: no-repeat;
+                                    
+                                   
+                                }
+                                .img61{
+                                    background-image: url("img/r6.avif");
+                                    background-size: cover; 
+                                    background-position: center;
+                                    background-repeat: no-repeat;
+                                }
+
+
                                 .sub{
                                     width: 100%;
                                     height: 20px;
